# almonaut

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  acquisitions_models.html  client.html  electronic_resources_models.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js
.github/workflows/: docs.yaml
_sources/: quickstart.rst.txt
docs/: acquisitions_models.rst  client.rst  conf.py  electronic_resources_models.rst  index.rst  quickstart.rst  requirements.txt
docs/_static/css/: custom.css
src/almonaut/: client.py  common_validators.py  exceptions.py  session.py
src/almonaut/acquisitions/: acquisitions_models.py
src/almonaut/electronic_resources/: electronic_resources_models.py
